# ELSA

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yml  Dockerfile  README.md  cli.py  compose.yaml  pyproject.toml  quiz.dockerfile  ruff.toml  scoreboard.dockerfile
common/: connections.py
services/leaderboard/: Dockerfile  connection.py  home.html  main.py
services/quiz/: Dockerfile  main.py
services/scoreboard/: main.py
templates/: home.html  leaderboard.html
utils/: cli.py  connections.py
